# Tetris

./: README.md  pyproject.toml
src/tetris/: __init__.py  game_state.py  gui.py  logic.py
tests/: example.py  logic.py
