[project]
name = "tetris"
version = "0.1.0"
description = "Tetris coded by idiots for fun"
readme = "README.md"
authors = [
    { name = "John Zoki"},
    { name = "Aaron Neugebauer"}
]
requires-python = ">=3.14"
dependencies = [
    "result>=0.17.0",
]

[project.scripts]
tetris = "tetris:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests/logic.py"]
